--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "axios": "^0.26.0",
+    "lottie-react-native": "^5.1.4",
     "navigation": "^6.1.0",
     "react": "18.1.0",
     "react-native": "0.70.4",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-vector-icons": "^9.2.0",
+    "react-native-video": "^5.2.1",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
