--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -82,7 +82,7 @@ project.ext.react = [
     enableHermes: true,  // clean and rebuild if changing
 ]
 project.ext.vectoricons = [
-    iconFontNames: [ 'MaterialIcons.ttf', 'AntDesign.ttf','FontAwesome.ttf','Ionicons.ttf', 'Feather.ttf'] // Name of the font files you want to copy
+    iconFontNames: [ 'MaterialIcons.ttf', 'AntDesign.ttf','FontAwesome.ttf','Ionicons.ttf', 'Feather.ttf','Entypo.ttf'] // Name of the font files you want to copy
 ]
 
 apply from: "../../node_modules/react-native/react.gradle"
